--- a/templates/index.html
+++ b/templates/index.html
@@ -193,12 +193,12 @@
         </div>
     </section>
     <!--END JUMBO-->
+    <center>
+        <div id="title">
+            <h1 align="center">TABLA BENCHMARKING - IRIS</h1>
 
-    <div id="title" align="center">
-        <h1>TABLA BENCHMARKING - IRIS</h1>
-
-    </div>
-
+        </div>
+    </center>
     <main class="principal">
         <!-- Content here_____________________1_________________-->
         <article id="articulo1" class="anuncios ">
@@ -209,7 +209,8 @@
                 <table class="table table-striped" id="t1">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">DATA IRIS</th>
+                            <th colspan="7" align="center">DATA IRIS</th>
+
                             <!-- <th scope="col">SENTIMIENTO</th> -->
                         </tr>
                     </thead>
@@ -291,10 +292,12 @@
             <!-- </div> -->
 
             <!-- end content -->
-            <div id="title2">
-                <h1>TABLA BENCHMARKING - VIDRIOS</h1>
+            <center>
+                <div id="title2">
+                    <h1>TABLA BENCHMARKING - VIDRIOS</h1>
 
-            </div>
+                </div>
+            </center>
             <!-- Content here_____________________2_________________-->
             <div class="col-md-4" id="cont3">
 
@@ -303,7 +306,7 @@
                 <table class="table table-striped" id="t1">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">DATA VIDRIOS </th>
+                            <th colspan="7">DATA VIDRIOS </th>
 
                         </tr>
                     </thead>
