--- a/templates/iris.html
+++ b/templates/iris.html
@@ -186,6 +186,7 @@
     </section>
     <!--END JUMBO-->
 
+
     <div id="title" align="center">
         <h1>Evaluaciones DataSet Vidrios</h1>
     </div>
@@ -201,7 +202,7 @@
                     <thead class="thead-dark">
                         <tr>
 
-                            <th scope="col">Regresión Logística</th>
+                            <th colspan="4">Regresión Logística</th>
 
                             <!-- <th scope="col">SENTIMIENTO</th> -->
                         </tr>
@@ -240,7 +241,7 @@
                 <table class="table table-striped" id="t1">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">Naive Bayes</th>
+                            <th colspan="4">Naive Bayes</th>
 
                         </tr>
                     </thead>
@@ -275,7 +276,7 @@
                     <thead class="thead-dark">
                         <tr>
 
-                            <th scope="col">Random Forest</th>
+                            <th colspan="4">Random Forest</th>
 
                         </tr>
                     </thead>
@@ -309,7 +310,7 @@
                     <thead class="thead-dark">
                         <tr>
 
-                            <th scope="col">KNN</th>
+                            <th colspan="4">KNN</th>
 
                         </tr>
                     </thead>
@@ -343,7 +344,7 @@
                     <thead class="thead-dark">
                         <tr>
 
-                            <th scope="col">SVM</th>
+                            <th colspan="4">SVM</th>
 
                         </tr>
                     </thead>
@@ -377,7 +378,7 @@
                     <thead class="thead-dark">
                         <tr>
 
-                            <th scope="col">RED NEURONAL</th>
+                            <th colspan="4">RED NEURONAL</th>
 
                         </tr>
                     </thead>
@@ -405,6 +406,7 @@
 
 
         </article>
+
     </main>
 
 </body>
