--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
                             <th colspan="7" align="center">DATA IRIS</th>
@@ -216,18 +216,18 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>MÉTRICAS &nbsp&nbsp&nbsp&nbsp&nbsp </td>
-                            <td>REGRESIÓN LOGÍSTICA </td>
-                            <td>NAIVE BAYES</td>
-                            <td>RANDOM FOREST</td>
-                            <td>SVM</td>
-                            <td>KNN</td>
-                            <td>RED NEURONAL</td>
+                            <td><b>MÉTRICAS &nbsp&nbsp&nbsp&nbsp&nbsp</b> </td>
+                            <td><b>REGRESIÓN LOGÍSTICA</b> </td>
+                            <td><b>NAIVE BAYES</b></td>
+                            <td><b>RANDOM FOREST</b></td>
+                            <td><b>SVM</b></td>
+                            <td><b>KNN</b></td>
+                            <td><b>RED NEURONAL</b></td>
 
                         </tr>
 
                         <tr>
-                            <td>ACCURACY</td>
+                            <td><b>ACCURACY</b></td>
                             {%for elemento in dt %}
                             <td>{{elemento}} </td>
                             {% endfor%}
@@ -235,7 +235,7 @@
 
                         </tr>
                         <tr>
-                            <td>PRECISION</td>
+                            <td><b>PRECISION</b></td>
                             {%for elemento in dp %}
                             <td>{{elemento}} </td>
                             {% endfor%}
@@ -243,7 +243,7 @@
 
                         </tr>
                         <tr>
-                            <td>RECALL</td>
+                            <td><b>RECALL</b></td>
                             {%for elemento in dr %}
                             <td>{{elemento}} </td>
                             {% endfor%}
@@ -251,7 +251,7 @@
 
                         </tr>
                         <tr>
-                            <td>F-MEASURE</td>
+                            <td><b>F-MEASURE</b></td>
 
                             {%for elemento in dfm %}
                             <td>{{elemento}} </td>
@@ -303,7 +303,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
                             <th colspan="7">DATA VIDRIOS </th>
@@ -311,18 +311,18 @@
                         </tr>
                     </thead>
                     <tr>
-                        <td>MÉTRICA </td>
-                        <td>REGRESIÓN LOGÍSTICA </td>
-                        <td>NAIVE BAYES</td>
-                        <td>RANDOM FOREST</td>
-                        <td>SVM</td>
-                        <td>KNN</td>
-                        <td>RED NEURONAL</td>
+                        <td><b>MÉTRICA </td>
+                        <td><b>REGRESIÓN LOGÍSTICA</b> </td>
+                        <td><b>NAIVE BAYES</b></td>
+                        <td><b>RANDOM FOREST</b></td>
+                        <td><b>SVM</b></td>
+                        <td><b>KNN</b></td>
+                        <td><b>RED NEURONAL</b></td>
 
                     </tr>
 
                     <tr>
-                        <td>ACCURACY</td>
+                        <td><b>ACCURACY</b></td>
                         {%for elemento in rdt %}
                         <td>{{elemento}} </td>
                         {% endfor%}
@@ -330,7 +330,7 @@
 
                     </tr>
                     <tr>
-                        <td>PRECISION</td>
+                        <td><b>PRECISION</b></td>
                         {%for elemento in rdp %}
                         <td>{{elemento}} </td>
                         {% endfor%}
@@ -338,7 +338,7 @@
 
                     </tr>
                     <tr>
-                        <td>RECALL</td>
+                        <td><b>RECALL</b></td>
                         {%for elemento in rdr %}
                         <td>{{elemento}} </td>
                         {% endfor%}
@@ -346,7 +346,7 @@
 
                     </tr>
                     <tr>
-                        <td>F-MEASURE</td>
+                        <td><b>F-MEASURE</b></td>
                         {%for elemento in rdfm %}
                         <td>{{elemento}} </td>
                         {% endfor%}
