--- a/templates/iris.html
+++ b/templates/iris.html
@@ -198,7 +198,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -209,10 +209,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -238,7 +238,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
                             <th colspan="4">Naive Bayes</th>
@@ -248,10 +248,10 @@
                     <tbody>
 
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
                         <tr>
                             {%for formu in dnb %}
@@ -272,7 +272,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -282,10 +282,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -306,7 +306,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -316,10 +316,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -340,7 +340,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -350,10 +350,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -374,7 +374,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -384,10 +384,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
