--- a/templates/vidrio.html
+++ b/templates/vidrio.html
@@ -197,7 +197,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -208,10 +208,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -237,7 +237,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
                             <th colspan="4">Naive Bayes</th>
@@ -247,10 +247,10 @@
                     <tbody>
 
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
                         <tr>
                             {%for formu in dnb %}
@@ -271,7 +271,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -281,10 +281,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -305,7 +305,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -315,10 +315,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -339,7 +339,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -349,10 +349,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td><b>F-MEASURE</b></td>
                         </tr>
 
                         <tr>
@@ -373,7 +373,7 @@
 
 
                 <!--tabbla -->
-                <table class="table table-striped" id="t1">
+                <table class="table table-striped" id="t1" border="2">
                     <thead class="thead-dark">
                         <tr>
 
@@ -383,10 +383,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>ACURACCY </td>
-                            <td>PRESICION </td>
-                            <td>RECALL </td>
-                            <td>F-MEASURE</td>
+                            <td><b>ACCURACY</b> </td>
+                            <td><b>PRECISION</b> </td>
+                            <td><b>RECALL </b></td>
+                            <td colspan="2"><b>F-MEASURE</b></td>
+
                         </tr>
 
                         <tr>
